--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ playground.xcworkspace
 #
 # Xcode automatically generates this directory with a .xcworkspacedata file and xcuserdata
 # hence it is not needed unless you have added a package configuration file to your project
-# .swiftpm
+.swiftpm
 
 .build/
 
@@ -36,3 +36,4 @@ fastlane/screenshots/**/*.png
 fastlane/test_output
 
 .DS_Store
+Artifacts
